--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,14 +2,10 @@ include README.md
 include LICENSE
 include pyproject.toml
 
-exclude rambot/database/__pycache__/
-exclude rambot/http/__pycache__/
-exclude rambot/scraper/__pycache__/
+# Include everything inside the rambot package
+recursive-include rambot *.py
+recursive-include rambot *.json
 
-recursive-include rambot/database *.py
-recursive-include rambot/http *.py
-recursive-include rambot/scraper *.py
-
-graft rambot/database
-graft rambot/http
-graft rambot/scraper
+# Specifically exclude compiled files everywhere
+global-exclude __pycache__
+global-exclude *.py[co]
