--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["wheel", "setuptools>=61.0"]
+requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "rambot"
-version = "0.1.3"
+version = "0.1.3" # This will be automatically updated by release.yml
 description = "Configurable web scraping framework designed to automate data extraction from web pages"
 authors = [
     { name = "Alexandre Vachon", email = "alex.vachon@outlook.com" }
@@ -17,25 +17,24 @@ classifiers = [
     "License :: OSI Approved :: MIT License"
 ]
 license = { file = "LICENSE" }
+
+# Cleaned up runtime dependencies
 dependencies = [
+    "mitmproxy",
     "botasaurus",
+    "botasaurus-driver",
     "sqlalchemy",
     "loguru",
     "pydantic-settings",
     "pydantic",
-    "wheel"
 ]
 
 [project.urls]
 Source = "https://github.com/AlexVachon/rambot"
 
 [tool.setuptools]
-packages = [
-    "rambot",
-    "rambot.database",
-    "rambot.http",
-    "rambot.scraper"
-]
+packages = { find = { where = ["."], include = ["rambot*"] } }
+include-package-data = true
 
 [tool.setuptools.exclude-package-data]
-"*" = ["__pycache__/*"]
+"*" = ["__pycache__/*", "*.pyc"]
